# Emotion-Detection-Chatbot

./: .gitignore  Few Examples of current state.docx  Final Targets Plan.docx  README.md  pyproject.toml  test.ipynb
backend/: main.py  requirements.txt
frontend/: index.html  package-lock.json  package.json
frontend/src/: App.css  App.jsx
