[project]
name = "targets"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11,<3.12"
dependencies = [
    "asttokens>=3.0.1",
    "deepface>=0.0.100",
    "fastapi>=0.139.0",
    "hsemotion>=0.3.0",
    "mediapipe>=0.10.35",
    "numpy>=2.4.6",
    "opencv-python>=4.13.0.92",
    "requests>=2.34.2",
    "scikit-learn>=1.9.0",
    "scipy>=1.17.1",
    "streamlit>=1.58.0",
    "tf-keras>=2.21.0",
    "torch",
    "torchaudio",
    "torchvision",
    "transformers>=5.13.1",
    "ultralytics>=8.4.89",
    "uvicorn[standard]>=0.49.0",
]

[[tool.uv.index]]
name = "pytorch-cu128"
url = "https://download.pytorch.org/whl/cu128"
explicit = true


[tool.uv.sources]
torch = { index = "pytorch-cu128" }
torchvision = { index = "pytorch-cu128" }
torchaudio = { index = "pytorch-cu128" }

